--- a/index1.html
+++ b/index1.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html>
 <head>
-<link rel="stylesheet" href="styles/styles.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<title>card</title>
+<link rel="stylesheet" href="E:\week-12-web-component-main\styles\styles.css">
 </head>
 <body>
-
-<h2 style="text-align:center">User Profile Card </h2>
+    <h2 style="text-align:center">User Profile Card </h2>
 
 <div class="card">
   <img src="E:\week-12-web-component-main\images\WhatsApp Image 2023-12-05 at 9.17.59 PM.jpeg"  alt="thaninki" style="width:100%">
@@ -23,6 +20,4 @@
   </div>
   <p><button>Contact</button></p>
 </div>
-
 </body>
-</html>
