--- a/index1.html
+++ b/index1.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-<title>card</title>
-<link rel="stylesheet" href="E:\week-12-web-component-main\styles\styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>Your Media Card Example</title>
 </head>
 <body>
-    <h2 style="text-align:center">User Profile Card </h2>
 
-<div class="card">
-  <img src="E:\week-12-web-component-main\images\WhatsApp Image 2023-12-05 at 9.17.59 PM.jpeg"  alt="thaninki" style="width:100%">
-  <h1>Sunanda Thaninki </h1>
-  
-  <p class="title">Web Developer </p>
-  <p>BYU IDAHO</p>
-  <div style="margin: 24px 0;">
-    <a href="#"><i class="fa fa-dribbble"></i></a> 
-    <a href="#"><i class="fa fa-twitter"></i></a>  
-    <a href="#"><i class="fa fa-linkedin"></i></a>  
-    <a href="#"><i class="fa fa-facebook"></i></a> 
+  <div class="media-card">
+    <img src="your-image-url.jpg" alt="Your Media">
+    <div class="media-text">
+      <h2>Your Title</h2>
+      <p>Your description goes here.</p>
+    </div>
   </div>
-  <p><button>Contact</button></p>
-</div>
+
+  <script src="script.js"></script>
+
 </body>
+</html>
