--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h2 style="text-align:center">User Profile Card </h2>
 
 <div class="card">
-  <img src="E:\week-12-web-component-main\images\WhatsApp Image 2023-12-05 at 9.17.59 PM.jpeg"  alt="thaninki" style="width:100%">
+  <img src="E:\week-12-web-component-main\images\WhatsApp Image 2023-12-05 at 9.17.59 PM.jpeg"  alt="thaninki" style="width:100%" height="400">
   <h1>Sunanda Thaninki </h1>
   
   <p class="title">Web Developer </p>
